--- a/pages/explore.html
+++ b/pages/explore.html
@@ -254,12 +254,12 @@
           <!-- 電腦顯示 -->
           <div class="d-none d-md-block">
 
-            <div class="row">
+            <div class="row align-items-center">
               <!-- 左邊 -->
               <div class="col-7">
-                <p class="text-primary-50 mt-82 mb-12">茶會到了尾聲，感謝您今日蒞臨羊蹄茶會</p>
+                <p class="text-primary-50 mb-12">茶會到了尾聲，感謝您今日蒞臨羊蹄茶會</p>
                 <p class="text-primary-50 mb-24">最後為您獻上最適合的咖啡風味</p>
-                <h2 class="h1 text-primary-50 mb-24">祕魯 薇拉瑞卡<br>安迪亞斯莊園</h2>
+                <h2 class="h3 text-primary-50 mb-24">祕魯 薇拉瑞卡<br>安迪亞斯莊園</h2>
                 <p class="text-primary-50 mb-40">歡迎您填寫線上預約至本店試喝~~</p>
                 <div class="text-center">
                   <button class="btn3 me-64">重新探索</button>
