p-md-12 mt-md-24

--- a/pages/explore.html
+++ b/pages/explore.html
@@ -54,7 +54,7 @@
               <div class="choosecard rounded">
                 <img class="rounded p-8 p-md-12" src="/assets/images/explore/explore-threeroad1.png"
                   alt="帶有酸甜花果香味的道路" />
-                <p class="text-primary-950 p-8 p-md-16">帶有酸甜花果香味的道路</p>
+                <p class="text-primary-950 p-8 p-md-12">帶有酸甜花果香味的道路</p>
               </div>
             </div>
 
@@ -62,7 +62,7 @@
               <div class="choosecard rounded">
                 <img class="rounded p-8 p-md-12" src="/assets/images/explore/explore-threeroad2.png"
                   alt="溫和堅果巧克力味的道路" />
-                <p class="text-primary-950 p-8 p-md-16">溫和堅果巧克力味的道路</p>
+                <p class="text-primary-950 p-8 p-md-12">溫和堅果巧克力味的道路</p>
               </div>
             </div>
 
@@ -70,12 +70,12 @@
               <div class="choosecard rounded">
                 <img class="rounded p-8 p-md-12" src="/assets/images/explore/explore-threeroad3.png"
                   alt="濃郁草本優雅香氣的道路" />
-                <p class="text-primary-950 p-8 p-md-16">濃郁草本優雅香氣的道路</p>
+                <p class="text-primary-950 p-8 p-md-12">濃郁草本優雅香氣的道路</p>
               </div>
             </div>
           </div>
 
-          <div class="text-center text-md-start">
+          <div class="text-center text-md-start mt-md-24">
             <button class="btn3">優雅回頭</button>
           </div>
         </div>
@@ -95,26 +95,26 @@
             <div class="col-12 col-md-4">
               <div class="choosecard rounded">
                 <img class="rounded p-8 p-md-12" src="/assets/images/explore/explore-cake2-1.png" alt="柑橘磅蛋糕" />
-                <p class="text-primary-950 p-8 p-md-16">柑橘磅蛋糕</p>
+                <p class="text-primary-950 p-8 p-md-12">柑橘磅蛋糕</p>
               </div>
             </div>
 
             <div class="col-12 col-md-4">
               <div class="choosecard rounded">
                 <img class="rounded p-8 p-md-12" src="/assets/images/explore/explore-cake2-2.png" alt="法式芒果軟糖" />
-                <p class="text-primary-950 p-8 p-md-16">法式芒果軟糖</p>
+                <p class="text-primary-950 p-8 p-md-12">法式芒果軟糖</p>
               </div>
             </div>
 
             <div class="col-12 col-md-4">
               <div class="choosecard rounded">
                 <img class="rounded p-8 p-md-12" src="/assets/images/explore/explore-cake2-3.png" alt="黑醋栗奶油蛋糕" />
-                <p class="text-primary-950 p-8 p-md-16">黑醋栗奶油蛋糕</p>
+                <p class="text-primary-950 p-8 p-md-12">黑醋栗奶油蛋糕</p>
               </div>
             </div>
           </div>
 
-          <div class="text-center text-md-start">
+          <div class="text-center text-md-start mt-md-24">
             <button class="btn3">優雅回頭</button>
           </div>
         </div>
@@ -133,19 +133,19 @@
             <div class="col-12 col-md-6">
               <div class="choosecard rounded">
                 <img class="rounded p-8 p-md-12" src="/assets/images/explore/explore-cake2-1.png" alt="白桃果凍" />
-                <p class="text-primary-950 p-8 p-md-16">白桃果凍</p>
+                <p class="text-primary-950 p-8 p-md-12">白桃果凍</p>
               </div>
             </div>
             <div class="col-12 col-md-6">
               <div class="choosecard rounded">
                 <img class="rounded p-8 p-md-12" src="/assets/images/explore/explore-cake2-2.png" alt="蜂蜜杯子蛋糕" />
-                <p class="text-primary-950 p-8 p-md-16">蜂蜜杯子蛋糕</p>
+                <p class="text-primary-950 p-8 p-md-12">蜂蜜杯子蛋糕</p>
               </div>
             </div>
 
           </div>
 
-          <div class="text-center text-md-start">
+          <div class="text-center text-md-start mt-md-24">
             <button class="btn3">優雅回頭</button>
           </div>
         </div>
@@ -163,33 +163,33 @@
             <div class="col-12 col-md-3">
               <div class="choosecard rounded">
                 <img class="rounded p-8 p-md-12" src="/assets/images/explore/explore-cake2-1.png" alt="李子核桃塔" />
-                <p class="text-primary-950 p-8 p-md-16">李子核桃塔</p>
+                <p class="text-primary-950 p-8 p-md-12">李子核桃塔</p>
               </div>
             </div>
 
             <div class="col-12 col-md-3">
               <div class="choosecard rounded">
                 <img class="rounded p-8 p-md-12" src="/assets/images/explore/explore-cake2-2.png" alt="萊姆夾心餅乾" />
-                <p class="text-primary-950 p-8 p-md-16">萊姆夾心餅乾</p>
+                <p class="text-primary-950 p-8 p-md-12">萊姆夾心餅乾</p>
               </div>
             </div>
 
             <div class="col-12 col-md-3">
               <div class="choosecard rounded">
                 <img class="rounded p-8 p-md-12" src="/assets/images/explore/explore-cake2-3.png" alt="櫻桃核果磅蛋糕" />
-                <p class="text-primary-950 p-8 p-md-16">櫻桃核果磅蛋糕</p>
+                <p class="text-primary-950 p-8 p-md-12">櫻桃核果磅蛋糕</p>
               </div>
             </div>
 
             <div class="col-12 col-md-3">
               <div class="choosecard rounded">
                 <img class="rounded p-8 p-md-12" src="/assets/images/explore/explore-cake2-4.png" alt="柑橘磅蛋糕" />
-                <p class="text-primary-950 p-8 p-md-16">柑橘磅蛋糕</p>
+                <p class="text-primary-950 p-8 p-md-12">柑橘磅蛋糕</p>
               </div>
             </div>
           </div>
 
-          <div class="text-center text-md-start">
+          <div class="text-center text-md-start mt-md-24">
             <button class="btn3">優雅回頭</button>
           </div>
         </div>
@@ -207,19 +207,19 @@
             <div class="col-12 col-md-6">
               <div class="choosecard rounded">
                 <img class="rounded p-8 p-md-12" src="/assets/images/explore/explore-cake2-1.png" alt="黑糖榛果塔" />
-                <p class="text-primary-950 p-8 p-md-16">黑糖榛果塔</p>
+                <p class="text-primary-950 p-8 p-md-12">黑糖榛果塔</p>
               </div>
             </div>
 
             <div class="col-12 col-md-6">
               <div class="choosecard rounded">
                 <img class="rounded p-8 p-md-12" src="/assets/images/explore/explore-cake2-2.png" alt="蜂蜜紅茶餅乾" />
-                <p class="text-primary-950 p-8 p-md-16">蜂蜜紅茶餅乾</p>
+                <p class="text-primary-950 p-8 p-md-12">蜂蜜紅茶餅乾</p>
               </div>
             </div>
           </div>
 
-          <div class="text-center text-md-start">
+          <div class="text-center text-md-start mt-md-24">
             <button class="btn3">優雅回頭</button>
           </div>
         </div>
