--- a/explore.html
+++ b/explore.html
@@ -8,8 +8,8 @@
   <title></title>
   <link rel="preload" href="/coffee/assets/ChenYuluoyan-2.0-Thin-CUaGSzYh.woff2" as="font" type="font/woff2"
     crossorigin="anonymous" fetchpriority="high" />
-    <script type="module" crossorigin src="/coffee/assets/main-D7DSFsLR.js"></script>
-    <link rel="stylesheet" crossorigin href="/coffee/assets/main-B01mF53d.css">
+    <script type="module" crossorigin src="/coffee/assets/main-CGu8XFXf.js"></script>
+    <link rel="stylesheet" crossorigin href="/coffee/assets/main-BVcSTE2g.css">
   </head>
 
 <body>
@@ -136,7 +136,7 @@
               <div class="choosecard rounded">
                 <img class="rounded p-8 p-md-12" src="/coffee/assets/explore-threeroad1-D4BSYSVf.png"
                   alt="帶有酸甜花果香味的道路" />
-                <p class="text-primary-950 p-8 p-md-16">帶有酸甜花果香味的道路</p>
+                <p class="text-primary-950 p-8 p-md-12">帶有酸甜花果香味的道路</p>
               </div>
             </div>
 
@@ -144,7 +144,7 @@
               <div class="choosecard rounded">
                 <img class="rounded p-8 p-md-12" src="/coffee/assets/explore-threeroad2-Dtt5t4RG.png"
                   alt="溫和堅果巧克力味的道路" />
-                <p class="text-primary-950 p-8 p-md-16">溫和堅果巧克力味的道路</p>
+                <p class="text-primary-950 p-8 p-md-12">溫和堅果巧克力味的道路</p>
               </div>
             </div>
 
@@ -152,12 +152,12 @@
               <div class="choosecard rounded">
                 <img class="rounded p-8 p-md-12" src="/coffee/assets/explore-threeroad3-C-cBBucw.png"
                   alt="濃郁草本優雅香氣的道路" />
-                <p class="text-primary-950 p-8 p-md-16">濃郁草本優雅香氣的道路</p>
+                <p class="text-primary-950 p-8 p-md-12">濃郁草本優雅香氣的道路</p>
               </div>
             </div>
           </div>
 
-          <div class="text-center text-md-start">
+          <div class="text-center text-md-start mt-md-24">
             <button class="btn3">優雅回頭</button>
           </div>
         </div>
@@ -177,26 +177,26 @@
             <div class="col-12 col-md-4">
               <div class="choosecard rounded">
                 <img class="rounded p-8 p-md-12" src="/coffee/assets/explore-cake2-1-DmFeBR6D.png" alt="柑橘磅蛋糕" />
-                <p class="text-primary-950 p-8 p-md-16">柑橘磅蛋糕</p>
+                <p class="text-primary-950 p-8 p-md-12">柑橘磅蛋糕</p>
               </div>
             </div>
 
             <div class="col-12 col-md-4">
               <div class="choosecard rounded">
                 <img class="rounded p-8 p-md-12" src="/coffee/assets/explore-cake2-2-aHBdFiLI.png" alt="法式芒果軟糖" />
-                <p class="text-primary-950 p-8 p-md-16">法式芒果軟糖</p>
+                <p class="text-primary-950 p-8 p-md-12">法式芒果軟糖</p>
               </div>
             </div>
 
             <div class="col-12 col-md-4">
               <div class="choosecard rounded">
                 <img class="rounded p-8 p-md-12" src="/coffee/assets/explore-cake2-3-cdAo6w2Y.png" alt="黑醋栗奶油蛋糕" />
-                <p class="text-primary-950 p-8 p-md-16">黑醋栗奶油蛋糕</p>
+                <p class="text-primary-950 p-8 p-md-12">黑醋栗奶油蛋糕</p>
               </div>
             </div>
           </div>
 
-          <div class="text-center text-md-start">
+          <div class="text-center text-md-start mt-md-24">
             <button class="btn3">優雅回頭</button>
           </div>
         </div>
@@ -215,19 +215,19 @@
             <div class="col-12 col-md-6">
               <div class="choosecard rounded">
                 <img class="rounded p-8 p-md-12" src="/coffee/assets/explore-cake2-1-DmFeBR6D.png" alt="白桃果凍" />
-                <p class="text-primary-950 p-8 p-md-16">白桃果凍</p>
+                <p class="text-primary-950 p-8 p-md-12">白桃果凍</p>
               </div>
             </div>
             <div class="col-12 col-md-6">
               <div class="choosecard rounded">
                 <img class="rounded p-8 p-md-12" src="/coffee/assets/explore-cake2-2-aHBdFiLI.png" alt="蜂蜜杯子蛋糕" />
-                <p class="text-primary-950 p-8 p-md-16">蜂蜜杯子蛋糕</p>
+                <p class="text-primary-950 p-8 p-md-12">蜂蜜杯子蛋糕</p>
               </div>
             </div>
 
           </div>
 
-          <div class="text-center text-md-start">
+          <div class="text-center text-md-start mt-md-24">
             <button class="btn3">優雅回頭</button>
           </div>
         </div>
@@ -245,33 +245,33 @@
             <div class="col-12 col-md-3">
               <div class="choosecard rounded">
                 <img class="rounded p-8 p-md-12" src="/coffee/assets/explore-cake2-1-DmFeBR6D.png" alt="李子核桃塔" />
-                <p class="text-primary-950 p-8 p-md-16">李子核桃塔</p>
+                <p class="text-primary-950 p-8 p-md-12">李子核桃塔</p>
               </div>
             </div>
 
             <div class="col-12 col-md-3">
               <div class="choosecard rounded">
                 <img class="rounded p-8 p-md-12" src="/coffee/assets/explore-cake2-2-aHBdFiLI.png" alt="萊姆夾心餅乾" />
-                <p class="text-primary-950 p-8 p-md-16">萊姆夾心餅乾</p>
+                <p class="text-primary-950 p-8 p-md-12">萊姆夾心餅乾</p>
               </div>
             </div>
 
             <div class="col-12 col-md-3">
               <div class="choosecard rounded">
                 <img class="rounded p-8 p-md-12" src="/coffee/assets/explore-cake2-3-cdAo6w2Y.png" alt="櫻桃核果磅蛋糕" />
-                <p class="text-primary-950 p-8 p-md-16">櫻桃核果磅蛋糕</p>
+                <p class="text-primary-950 p-8 p-md-12">櫻桃核果磅蛋糕</p>
               </div>
             </div>
 
             <div class="col-12 col-md-3">
               <div class="choosecard rounded">
                 <img class="rounded p-8 p-md-12" src="/coffee/assets/explore-cake2-4-DTVZJsfW.png" alt="柑橘磅蛋糕" />
-                <p class="text-primary-950 p-8 p-md-16">柑橘磅蛋糕</p>
+                <p class="text-primary-950 p-8 p-md-12">柑橘磅蛋糕</p>
               </div>
             </div>
           </div>
 
-          <div class="text-center text-md-start">
+          <div class="text-center text-md-start mt-md-24">
             <button class="btn3">優雅回頭</button>
           </div>
         </div>
@@ -289,19 +289,19 @@
             <div class="col-12 col-md-6">
               <div class="choosecard rounded">
                 <img class="rounded p-8 p-md-12" src="/coffee/assets/explore-cake2-1-DmFeBR6D.png" alt="黑糖榛果塔" />
-                <p class="text-primary-950 p-8 p-md-16">黑糖榛果塔</p>
+                <p class="text-primary-950 p-8 p-md-12">黑糖榛果塔</p>
               </div>
             </div>
 
             <div class="col-12 col-md-6">
               <div class="choosecard rounded">
                 <img class="rounded p-8 p-md-12" src="/coffee/assets/explore-cake2-2-aHBdFiLI.png" alt="蜂蜜紅茶餅乾" />
-                <p class="text-primary-950 p-8 p-md-16">蜂蜜紅茶餅乾</p>
+                <p class="text-primary-950 p-8 p-md-12">蜂蜜紅茶餅乾</p>
               </div>
             </div>
           </div>
 
-          <div class="text-center text-md-start">
+          <div class="text-center text-md-start mt-md-24">
             <button class="btn3">優雅回頭</button>
           </div>
         </div>
@@ -336,12 +336,12 @@
           <!-- 電腦顯示 -->
           <div class="d-none d-md-block">
 
-            <div class="row">
+            <div class="row align-items-center">
               <!-- 左邊 -->
               <div class="col-7">
-                <p class="text-primary-50 mt-82 mb-12">茶會到了尾聲，感謝您今日蒞臨羊蹄茶會</p>
+                <p class="text-primary-50 mb-12">茶會到了尾聲，感謝您今日蒞臨羊蹄茶會</p>
                 <p class="text-primary-50 mb-24">最後為您獻上最適合的咖啡風味</p>
-                <h2 class="h1 text-primary-50 mb-24">祕魯 薇拉瑞卡<br>安迪亞斯莊園</h2>
+                <h2 class="h3 text-primary-50 mb-24">祕魯 薇拉瑞卡<br>安迪亞斯莊園</h2>
                 <p class="text-primary-50 mb-40">歡迎您填寫線上預約至本店試喝~~</p>
                 <div class="text-center">
                   <button class="btn3 me-64">重新探索</button>
@@ -366,24 +366,33 @@
       </section>
       <!-- 茶會到了尾聲 end -->
     </main>
+    <div class="bg-primary-800 py-48">
     <div class="container">
-    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-        <div class="col-md-4 d-flex align-items-center"> <a href="index.html"
-                class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1" aria-label="Bootstrap"> <svg
-                    class="bi" width="30" height="24" aria-hidden="true">
-                    <use xlink:href="#bootstrap"></use>
-                </svg> </a> <span class="mb-3 mb-md-0 text-body-secondary">© 2025 羊蹄咖啡</span> </div>
-        <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-            <li class="ms-3"><a class="text-body-secondary" href="#" aria-label="Instagram"><svg class="bi" width="24"
-                        height="24" aria-hidden="true">
-                        <use xlink:href="#instagram"></use>
-                    </svg></a></li>
-            <li class="ms-3"><a class="text-body-secondary" href="#" aria-label="Facebook"><svg class="bi" width="24"
-                        height="24">
-                        <use xlink:href="#facebook"></use>
-                    </svg></a></li>
-        </ul>
-    </footer>
+        <div>
+            <div class=" d-flex align-center justify-between">
+                <!-- logo -->
+                <div class="col-3 col-md-4">
+                    <div><a href="index.html">
+                            <img src="/coffee/assets/Type_White-1N1ybTwz.png" alt="品牌 Logo" width="240" height="56" />
+                        </a></div>
+                </div>
+                <!-- 店家資訊 -->
+                <div>
+                    <p class="paragraph-small text-grey-300 mb-8">新北市永和區秀朗路一段12巷1弄128號</p>
+                    <p class="paragraph-small text-grey-300 mb-8">sheepo.coffee@gmail.com</p>
+                    <p class="paragraph-small text-grey-300 mb-12">0918-287-998</p>
+                </div>
+            </div>
+        </div>
+
+        <footer class="footer text-grey-300  pt-12">
+            <p>© Copyright 2024 TTH. All Rights Reserved</p>
+        </footer>
+
+    </div>
+
+
+
 </div>      
       <script>
     let pagetilte = "羊蹄咖啡";
