--- a/products.html
+++ b/products.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title></title>
-    <script type="module" crossorigin src="/coffee/assets/main-D7DSFsLR.js"></script>
-    <link rel="stylesheet" crossorigin href="/coffee/assets/main-B01mF53d.css">
+    <script type="module" crossorigin src="/coffee/assets/main-CGu8XFXf.js"></script>
+    <link rel="stylesheet" crossorigin href="/coffee/assets/main-BVcSTE2g.css">
   </head>
 
 <body class="products-bg">
@@ -486,24 +486,33 @@
 
       
     </main>
+    <div class="bg-primary-800 py-48">
     <div class="container">
-    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-        <div class="col-md-4 d-flex align-items-center"> <a href="index.html"
-                class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1" aria-label="Bootstrap"> <svg
-                    class="bi" width="30" height="24" aria-hidden="true">
-                    <use xlink:href="#bootstrap"></use>
-                </svg> </a> <span class="mb-3 mb-md-0 text-body-secondary">© 2025 羊蹄咖啡</span> </div>
-        <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-            <li class="ms-3"><a class="text-body-secondary" href="#" aria-label="Instagram"><svg class="bi" width="24"
-                        height="24" aria-hidden="true">
-                        <use xlink:href="#instagram"></use>
-                    </svg></a></li>
-            <li class="ms-3"><a class="text-body-secondary" href="#" aria-label="Facebook"><svg class="bi" width="24"
-                        height="24">
-                        <use xlink:href="#facebook"></use>
-                    </svg></a></li>
-        </ul>
-    </footer>
+        <div>
+            <div class=" d-flex align-center justify-between">
+                <!-- logo -->
+                <div class="col-3 col-md-4">
+                    <div><a href="index.html">
+                            <img src="/coffee/assets/Type_White-1N1ybTwz.png" alt="品牌 Logo" width="240" height="56" />
+                        </a></div>
+                </div>
+                <!-- 店家資訊 -->
+                <div>
+                    <p class="paragraph-small text-grey-300 mb-8">新北市永和區秀朗路一段12巷1弄128號</p>
+                    <p class="paragraph-small text-grey-300 mb-8">sheepo.coffee@gmail.com</p>
+                    <p class="paragraph-small text-grey-300 mb-12">0918-287-998</p>
+                </div>
+            </div>
+        </div>
+
+        <footer class="footer text-grey-300  pt-12">
+            <p>© Copyright 2024 TTH. All Rights Reserved</p>
+        </footer>
+
+    </div>
+
+
+
 </div>      
       <script>
     let pagetilte = "羊蹄咖啡";
