--- a/pages/explore.html
+++ b/pages/explore.html
@@ -94,21 +94,21 @@
           <div class="row">
             <div class="col-12 col-md-4">
               <div class="choosecard rounded">
-                <img class="rounded p-8 p-md-12" src="/assets/images/explore/explore-cake2-1.png" alt="柑橘磅蛋糕" />
+                <img class="rounded p-8 p-md-12" src="/assets/images/explore/explore-cake1-1.png" alt="柑橘磅蛋糕" />
                 <p class="text-primary-950 p-8 p-md-12">柑橘磅蛋糕</p>
               </div>
             </div>
 
             <div class="col-12 col-md-4">
               <div class="choosecard rounded">
-                <img class="rounded p-8 p-md-12" src="/assets/images/explore/explore-cake2-2.png" alt="法式芒果軟糖" />
+                <img class="rounded p-8 p-md-12" src="/assets/images/explore/explore-cake1-2.png" alt="法式芒果軟糖" />
                 <p class="text-primary-950 p-8 p-md-12">法式芒果軟糖</p>
               </div>
             </div>
 
             <div class="col-12 col-md-4">
               <div class="choosecard rounded">
-                <img class="rounded p-8 p-md-12" src="/assets/images/explore/explore-cake2-3.png" alt="黑醋栗奶油蛋糕" />
+                <img class="rounded p-8 p-md-12" src="/assets/images/explore/explore-cake1-3.png" alt="黑醋栗奶油蛋糕" />
                 <p class="text-primary-950 p-8 p-md-12">黑醋栗奶油蛋糕</p>
               </div>
             </div>
@@ -123,22 +123,21 @@
 
       <!--  接著享用時麼點心呢 -->
       <section>
-        <div class="content bg3">
+        <div class="content bg3-1">
           <h2 class="h2 text-primary-50 mb-16 mb-md-40">
             接著享用時麼點心呢?
-
           </h2>
 
           <div class="row">
             <div class="col-12 col-md-6">
               <div class="choosecard rounded">
-                <img class="rounded p-8 p-md-12" src="/assets/images/explore/explore-cake2-1.png" alt="白桃果凍" />
+                <img class="rounded p-8 p-md-12" src="/assets/images/explore/explore-cake4-1.png" alt="白桃果凍" />
                 <p class="text-primary-950 p-8 p-md-12">白桃果凍</p>
               </div>
             </div>
             <div class="col-12 col-md-6">
               <div class="choosecard rounded">
-                <img class="rounded p-8 p-md-12" src="/assets/images/explore/explore-cake2-2.png" alt="蜂蜜杯子蛋糕" />
+                <img class="rounded p-8 p-md-12" src="/assets/images/explore/explore-cake4-2.png" alt="蜂蜜杯子蛋糕" />
                 <p class="text-primary-950 p-8 p-md-12">蜂蜜杯子蛋糕</p>
               </div>
             </div>
@@ -183,7 +182,7 @@
 
             <div class="col-12 col-md-3">
               <div class="choosecard rounded">
-                <img class="rounded p-8 p-md-12" src="/assets/images/explore/explore-cake2-4.png" alt="柑橘磅蛋糕" />
+                <img class="rounded p-8 p-md-12" src="/assets/images/explore/explore-cake1-1.png" alt="柑橘磅蛋糕" />
                 <p class="text-primary-950 p-8 p-md-12">柑橘磅蛋糕</p>
               </div>
             </div>
@@ -206,14 +205,14 @@
           <div class="row">
             <div class="col-12 col-md-6">
               <div class="choosecard rounded">
-                <img class="rounded p-8 p-md-12" src="/assets/images/explore/explore-cake2-1.png" alt="黑糖榛果塔" />
+                <img class="rounded p-8 p-md-12" src="/assets/images/explore/explore-cake3-1.png" alt="黑糖榛果塔" />
                 <p class="text-primary-950 p-8 p-md-12">黑糖榛果塔</p>
               </div>
             </div>
 
             <div class="col-12 col-md-6">
               <div class="choosecard rounded">
-                <img class="rounded p-8 p-md-12" src="/assets/images/explore/explore-cake2-2.png" alt="蜂蜜紅茶餅乾" />
+                <img class="rounded p-8 p-md-12" src="/assets/images/explore/explore-cake3-2.png" alt="蜂蜜紅茶餅乾" />
                 <p class="text-primary-950 p-8 p-md-12">蜂蜜紅茶餅乾</p>
               </div>
             </div>
