--- a/explore.html
+++ b/explore.html
@@ -8,8 +8,8 @@
   <title></title>
   <link rel="preload" href="/coffee/assets/ChenYuluoyan-2.0-Thin-CUaGSzYh.woff2" as="font" type="font/woff2"
     crossorigin="anonymous" fetchpriority="high" />
-    <script type="module" crossorigin src="/coffee/assets/main-CGu8XFXf.js"></script>
-    <link rel="stylesheet" crossorigin href="/coffee/assets/main-BVcSTE2g.css">
+    <script type="module" crossorigin src="/coffee/assets/main-BfOmuH5Z.js"></script>
+    <link rel="stylesheet" crossorigin href="/coffee/assets/main-CbhKQudB.css">
   </head>
 
 <body>
@@ -176,21 +176,21 @@
           <div class="row">
             <div class="col-12 col-md-4">
               <div class="choosecard rounded">
-                <img class="rounded p-8 p-md-12" src="/coffee/assets/explore-cake2-1-DmFeBR6D.png" alt="柑橘磅蛋糕" />
+                <img class="rounded p-8 p-md-12" src="/coffee/assets/explore-cake1-1-DTVZJsfW.png" alt="柑橘磅蛋糕" />
                 <p class="text-primary-950 p-8 p-md-12">柑橘磅蛋糕</p>
               </div>
             </div>
 
             <div class="col-12 col-md-4">
               <div class="choosecard rounded">
-                <img class="rounded p-8 p-md-12" src="/coffee/assets/explore-cake2-2-aHBdFiLI.png" alt="法式芒果軟糖" />
+                <img class="rounded p-8 p-md-12" src="/coffee/assets/explore-cake1-2-BapPVQB_.png" alt="法式芒果軟糖" />
                 <p class="text-primary-950 p-8 p-md-12">法式芒果軟糖</p>
               </div>
             </div>
 
             <div class="col-12 col-md-4">
               <div class="choosecard rounded">
-                <img class="rounded p-8 p-md-12" src="/coffee/assets/explore-cake2-3-cdAo6w2Y.png" alt="黑醋栗奶油蛋糕" />
+                <img class="rounded p-8 p-md-12" src="/coffee/assets/explore-cake1-3-BV_beUgG.png" alt="黑醋栗奶油蛋糕" />
                 <p class="text-primary-950 p-8 p-md-12">黑醋栗奶油蛋糕</p>
               </div>
             </div>
@@ -205,22 +205,21 @@
 
       <!--  接著享用時麼點心呢 -->
       <section>
-        <div class="content bg3">
+        <div class="content bg3-1">
           <h2 class="h2 text-primary-50 mb-16 mb-md-40">
             接著享用時麼點心呢?
-
           </h2>
 
           <div class="row">
             <div class="col-12 col-md-6">
               <div class="choosecard rounded">
-                <img class="rounded p-8 p-md-12" src="/coffee/assets/explore-cake2-1-DmFeBR6D.png" alt="白桃果凍" />
+                <img class="rounded p-8 p-md-12" src="/coffee/assets/explore-cake4-1-G_S2npvA.png" alt="白桃果凍" />
                 <p class="text-primary-950 p-8 p-md-12">白桃果凍</p>
               </div>
             </div>
             <div class="col-12 col-md-6">
               <div class="choosecard rounded">
-                <img class="rounded p-8 p-md-12" src="/coffee/assets/explore-cake2-2-aHBdFiLI.png" alt="蜂蜜杯子蛋糕" />
+                <img class="rounded p-8 p-md-12" src="/coffee/assets/explore-cake4-2-DG4R5Tx8.png" alt="蜂蜜杯子蛋糕" />
                 <p class="text-primary-950 p-8 p-md-12">蜂蜜杯子蛋糕</p>
               </div>
             </div>
@@ -265,7 +264,7 @@
 
             <div class="col-12 col-md-3">
               <div class="choosecard rounded">
-                <img class="rounded p-8 p-md-12" src="/coffee/assets/explore-cake2-4-DTVZJsfW.png" alt="柑橘磅蛋糕" />
+                <img class="rounded p-8 p-md-12" src="/coffee/assets/explore-cake1-1-DTVZJsfW.png" alt="柑橘磅蛋糕" />
                 <p class="text-primary-950 p-8 p-md-12">柑橘磅蛋糕</p>
               </div>
             </div>
@@ -288,14 +287,14 @@
           <div class="row">
             <div class="col-12 col-md-6">
               <div class="choosecard rounded">
-                <img class="rounded p-8 p-md-12" src="/coffee/assets/explore-cake2-1-DmFeBR6D.png" alt="黑糖榛果塔" />
+                <img class="rounded p-8 p-md-12" src="/coffee/assets/explore-cake3-1-CsMOuJNy.png" alt="黑糖榛果塔" />
                 <p class="text-primary-950 p-8 p-md-12">黑糖榛果塔</p>
               </div>
             </div>
 
             <div class="col-12 col-md-6">
               <div class="choosecard rounded">
-                <img class="rounded p-8 p-md-12" src="/coffee/assets/explore-cake2-2-aHBdFiLI.png" alt="蜂蜜紅茶餅乾" />
+                <img class="rounded p-8 p-md-12" src="/coffee/assets/explore-cake3-2-BNqGVHeL.png" alt="蜂蜜紅茶餅乾" />
                 <p class="text-primary-950 p-8 p-md-12">蜂蜜紅茶餅乾</p>
               </div>
             </div>
