製作好評卡

--- a/pages/index.html
+++ b/pages/index.html
@@ -115,7 +115,27 @@
         <div class="text-center mb-64">
           <p class="heading-small ls-2 text-accent-300 mb-12">FEEDBACK</p>
           <p class="heading-xxlarge ls-2 text-primary-950">顧客好評</p>
-          
+          <div class="marquee">
+            <div class="feedback">
+              <div class="p-32">
+                <div class="d-flex align-items-center mb-12">
+                  <img class="me-12" src="/assets/images/index/feedback/Andy.png" alt="Andy">
+                  <p class="label-medium ls-2 text-primary-950 mb-0">Andy</p>
+                </div>
+                <div class="d-flex align-items-center mb-12">
+                  <p class="label-small ls-2 text-primary-950 me-8 mb-0">5.0</p>
+                  <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
+                  <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
+                  <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
+                  <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
+                  <img src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
+                </div>
+                <p class="text-start paragraph-medium ls-2 text-primary-950">每一口都喝得出用心，香氣乾淨純粹，沒有多餘的雜味。這是我近期最喜歡的一間咖啡品牌，會想一直回購。</p>
+              </div>
+            </div>
+            <div class="feedback"></div>
+
+          </div>
         </div>
         
       </div>
@@ -123,6 +143,7 @@
     <%- include('./layout/footer'); -%>
 
       <script type="module" src="../main.js"></script>
+
       <%- include('./layout/js'); -%>
 </body>
 
