--- a/pages/index.html
+++ b/pages/index.html
@@ -112,37 +112,159 @@
         </div>
       </div>
       <div class="py-120">
-        <div class="text-center mb-64">
+        <div class="text-center">
           <p class="heading-small ls-2 text-accent-300 mb-12">FEEDBACK</p>
-          <p class="heading-xxlarge ls-2 text-primary-950">顧客好評</p>
+          <p class="heading-xxlarge ls-2 text-primary-950 mb-64">顧客好評</p>
           <div class="marquee">
-            <div class="feedback">
-              <div class="p-32">
-                <div class="d-flex align-items-center mb-12">
-                  <img class="me-12" src="/assets/images/index/feedback/Andy.png" alt="Andy">
-                  <p class="label-medium ls-2 text-primary-950 mb-0">Andy</p>
+            <div class="marquee-list d-flex">
+              <div class="feedback ms-28">
+                <div class="p-32">
+                  <div class="d-flex align-items-center mb-12">
+                    <img class="me-12" src="/assets/images/index/feedback/Andy.png" alt="Andy">
+                    <p class="label-medium ls-2 text-primary-950 mb-0">Andy</p>
+                  </div>
+                  <div class="d-flex align-items-center mb-12">
+                    <p class="label-small ls-2 text-primary-950 me-8 mb-0">5.0</p>
+                    <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
+                    <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
+                    <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
+                    <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
+                    <img src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
+                  </div>
+                  <p class="text-start paragraph-medium ls-2 text-primary-950 mb-0">
+                    每一口都喝得出用心，香氣乾淨純粹，沒有多餘的雜味。這是我近期最喜歡的一間咖啡品牌，會想一直回購。</p>
                 </div>
-                <div class="d-flex align-items-center mb-12">
-                  <p class="label-small ls-2 text-primary-950 me-8 mb-0">5.0</p>
-                  <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
-                  <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
-                  <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
-                  <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
-                  <img src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
+              </div>
+              <div class="feedback ms-28">
+                <div class="p-32">
+                  <div class="d-flex align-items-center mb-12">
+                    <img class="me-12" src="/assets/images/index/feedback/Andy.png" alt="Andy">
+                    <p class="label-medium ls-2 text-primary-950 mb-0">Andy</p>
+                  </div>
+                  <div class="d-flex align-items-center mb-12">
+                    <p class="label-small ls-2 text-primary-950 me-8 mb-0">5.0</p>
+                    <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
+                    <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
+                    <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
+                    <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
+                    <img src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
+                  </div>
+                  <p class="text-start paragraph-medium ls-2 text-primary-950 mb-0">
+                    每一口都喝得出用心，香氣乾淨純粹，沒有多餘的雜味。這是我近期最喜歡的一間咖啡品牌，會想一直回購。</p>
                 </div>
-                <p class="text-start paragraph-medium ls-2 text-primary-950">每一口都喝得出用心，香氣乾淨純粹，沒有多餘的雜味。這是我近期最喜歡的一間咖啡品牌，會想一直回購。</p>
+              </div>
+              <div class="feedback ms-28">
+                <div class="p-32">
+                  <div class="d-flex align-items-center mb-12">
+                    <img class="me-12" src="/assets/images/index/feedback/Andy.png" alt="Andy">
+                    <p class="label-medium ls-2 text-primary-950 mb-0">Andy</p>
+                  </div>
+                  <div class="d-flex align-items-center mb-12">
+                    <p class="label-small ls-2 text-primary-950 me-8 mb-0">5.0</p>
+                    <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
+                    <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
+                    <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
+                    <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
+                    <img src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
+                  </div>
+                  <p class="text-start paragraph-medium ls-2 text-primary-950 mb-0">
+                    每一口都喝得出用心，香氣乾淨純粹，沒有多餘的雜味。這是我近期最喜歡的一間咖啡品牌，會想一直回購。</p>
+                </div>
+              </div>
+              <div class="feedback ms-28">
+                <div class="p-32">
+                  <div class="d-flex align-items-center mb-12">
+                    <img class="me-12" src="/assets/images/index/feedback/Andy.png" alt="Andy">
+                    <p class="label-medium ls-2 text-primary-950 mb-0">Andy</p>
+                  </div>
+                  <div class="d-flex align-items-center mb-12">
+                    <p class="label-small ls-2 text-primary-950 me-8 mb-0">5.0</p>
+                    <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
+                    <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
+                    <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
+                    <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
+                    <img src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
+                  </div>
+                  <p class="text-start paragraph-medium ls-2 text-primary-950 mb-0">
+                    每一口都喝得出用心，香氣乾淨純粹，沒有多餘的雜味。這是我近期最喜歡的一間咖啡品牌，會想一直回購。</p>
+                </div>
+              </div>
+              <div class="feedback ms-28">
+                <div class="p-32">
+                  <div class="d-flex align-items-center mb-12">
+                    <img class="me-12" src="/assets/images/index/feedback/Andy.png" alt="Andy">
+                    <p class="label-medium ls-2 text-primary-950 mb-0">Andy</p>
+                  </div>
+                  <div class="d-flex align-items-center mb-12">
+                    <p class="label-small ls-2 text-primary-950 me-8 mb-0">5.0</p>
+                    <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
+                    <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
+                    <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
+                    <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
+                    <img src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
+                  </div>
+                  <p class="text-start paragraph-medium ls-2 text-primary-950 mb-0">
+                    每一口都喝得出用心，香氣乾淨純粹，沒有多餘的雜味。這是我近期最喜歡的一間咖啡品牌，會想一直回購。</p>
+                </div>
+              </div>
+              <div class="feedback ms-28">
+                <div class="p-32">
+                  <div class="d-flex align-items-center mb-12">
+                    <img class="me-12" src="/assets/images/index/feedback/Andy.png" alt="Andy">
+                    <p class="label-medium ls-2 text-primary-950 mb-0">Andy</p>
+                  </div>
+                  <div class="d-flex align-items-center mb-12">
+                    <p class="label-small ls-2 text-primary-950 me-8 mb-0">5.0</p>
+                    <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
+                    <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
+                    <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
+                    <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
+                    <img src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
+                  </div>
+                  <p class="text-start paragraph-medium ls-2 text-primary-950 mb-0">
+                    每一口都喝得出用心，香氣乾淨純粹，沒有多餘的雜味。這是我近期最喜歡的一間咖啡品牌，會想一直回購。</p>
+                </div>
               </div>
             </div>
-            <div class="feedback"></div>
-
           </div>
         </div>
-        
+
       </div>
     </main>
     <%- include('./layout/footer'); -%>
 
       <script type="module" src="../main.js"></script>
+      <Script>
+        function load() {
+
+          var list = document.querySelector('.marquee-list')
+          var feedback = document.querySelector('.feedback');
+          let left = list.style.left;
+          let timer;
+          function move() {
+            clearInterval(timer);
+            timer = setInterval((env) => {
+              left = left - 2;
+              console.log(list.clientLeft);
+              if (left == - (6 * 200 + 2 * 24)) {
+                left = 0;
+              }
+              list.style.left = left + 'px';
+            }, 50);
+          }
+
+          move();
+          box.onmouseover = function () {
+            clearInterval(timer);
+          };
+
+          box.onmouseleave = function () {
+            move();
+          };
+        };
+        document.addEventListener('DOMContentLoaded', load);
+        
+      </Script>
 
       <%- include('./layout/js'); -%>
 </body>
