走馬燈測試

--- a/pages/index.html
+++ b/pages/index.html
@@ -115,9 +115,9 @@
         <div class="text-center">
           <p class="heading-small ls-2 text-accent-300 mb-12">FEEDBACK</p>
           <p class="heading-xxlarge ls-2 text-primary-950 mb-64">顧客好評</p>
-          <div class="marquee">
-            <div class="marquee-list d-flex">
-              <div class="feedback ms-28">
+          <div class="box">
+            <div class="list">
+              <div class="feedback">
                 <div class="p-32">
                   <div class="d-flex align-items-center mb-12">
                     <img class="me-12" src="/assets/images/index/feedback/Andy.png" alt="Andy">
@@ -135,7 +135,7 @@
                     每一口都喝得出用心，香氣乾淨純粹，沒有多餘的雜味。這是我近期最喜歡的一間咖啡品牌，會想一直回購。</p>
                 </div>
               </div>
-              <div class="feedback ms-28">
+              <div class="feedback">
                 <div class="p-32">
                   <div class="d-flex align-items-center mb-12">
                     <img class="me-12" src="/assets/images/index/feedback/Andy.png" alt="Andy">
@@ -153,7 +153,7 @@
                     每一口都喝得出用心，香氣乾淨純粹，沒有多餘的雜味。這是我近期最喜歡的一間咖啡品牌，會想一直回購。</p>
                 </div>
               </div>
-              <div class="feedback ms-28">
+              <div class="feedback">
                 <div class="p-32">
                   <div class="d-flex align-items-center mb-12">
                     <img class="me-12" src="/assets/images/index/feedback/Andy.png" alt="Andy">
@@ -171,7 +171,7 @@
                     每一口都喝得出用心，香氣乾淨純粹，沒有多餘的雜味。這是我近期最喜歡的一間咖啡品牌，會想一直回購。</p>
                 </div>
               </div>
-              <div class="feedback ms-28">
+              <div class="feedback">
                 <div class="p-32">
                   <div class="d-flex align-items-center mb-12">
                     <img class="me-12" src="/assets/images/index/feedback/Andy.png" alt="Andy">
@@ -189,7 +189,7 @@
                     每一口都喝得出用心，香氣乾淨純粹，沒有多餘的雜味。這是我近期最喜歡的一間咖啡品牌，會想一直回購。</p>
                 </div>
               </div>
-              <div class="feedback ms-28">
+              <div class="feedback">
                 <div class="p-32">
                   <div class="d-flex align-items-center mb-12">
                     <img class="me-12" src="/assets/images/index/feedback/Andy.png" alt="Andy">
@@ -207,7 +207,7 @@
                     每一口都喝得出用心，香氣乾淨純粹，沒有多餘的雜味。這是我近期最喜歡的一間咖啡品牌，會想一直回購。</p>
                 </div>
               </div>
-              <div class="feedback ms-28">
+              <div class="feedback">
                 <div class="p-32">
                   <div class="d-flex align-items-center mb-12">
                     <img class="me-12" src="/assets/images/index/feedback/Andy.png" alt="Andy">
@@ -237,8 +237,8 @@
       <Script>
         function load() {
 
-          var list = document.querySelector('.marquee-list')
-          var feedback = document.querySelector('.feedback');
+          var list = document.querySelector('.list')
+          var feedback = document.querySelector('.box');
           let left = list.style.left;
           let timer;
           function move() {
