--- a/products.html
+++ b/products.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title></title>
-    <script type="module" crossorigin src="/coffee/assets/main-CacwV8NT.js"></script>
-    <link rel="stylesheet" crossorigin href="/coffee/assets/main-DOK6W2p0.css">
+    <script type="module" crossorigin src="/coffee/assets/main-C0Td-eYM.js"></script>
+    <link rel="stylesheet" crossorigin href="/coffee/assets/main-WStk0Csp.css">
   </head>
 
 <body class="products-bg">
@@ -149,14 +149,10 @@
 
         <div class="col-3 my-12">
             <div class="search position-relative">
-                
               <input type="text" class="form-control paragraph-small rounded-0 ps-44 py-12 pe-12 ps-md-52 py-md-8" id="search" placeholder="搜尋商品" aria-label="搜尋商品">
-  
               <svg width="24" height="24" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="position-absolute top-50 start-0 translate-middle-y mx-12"><path d="M10 2.5a7.5 7.5 0 0 1 5.964 12.048l4.743 4.745a1 1 0 0 1-1.32 1.497l-.094-.083-4.745-4.743A7.5 7.5 0 1 1 10 2.5Zm0 2a5.5 5.5 0 1 0 0 11 5.5 5.5 0 0 0 0-11Z" fill="#ADADAD"/></svg>
-                
             </div>
         </div>
-
       </div>
 
       <!-- 卡片 Bootsrap Grid cards -->
@@ -576,6 +572,8 @@
             break;
     }
     document.title = pagetilte;
-</script></body>
+</script>
+
+ </body>
 
 </html>
