--- a/demo.html
+++ b/demo.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>demo</title>
-      <script type="module" crossorigin src="/coffee/assets/main-CacwV8NT.js"></script>
-      <link rel="stylesheet" crossorigin href="/coffee/assets/main-DOK6W2p0.css">
+      <script type="module" crossorigin src="/coffee/assets/main-C0Td-eYM.js"></script>
+      <link rel="stylesheet" crossorigin href="/coffee/assets/main-WStk0Csp.css">
     </head>
 
 <body>
@@ -88,6 +88,8 @@
             break;
     }
     document.title = pagetilte;
-</script></body>
+</script>
+
+ </body>
 
 </html>
