--- a/productdetail.html
+++ b/productdetail.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title></title>
-    <script type="module" crossorigin src="/coffee/assets/main-CacwV8NT.js"></script>
-    <link rel="stylesheet" crossorigin href="/coffee/assets/main-DOK6W2p0.css">
+    <script type="module" crossorigin src="/coffee/assets/main-C0Td-eYM.js"></script>
+    <link rel="stylesheet" crossorigin href="/coffee/assets/main-WStk0Csp.css">
   </head>
 
 <body>
@@ -151,6 +151,8 @@
             break;
     }
     document.title = pagetilte;
-</script></body>
+</script>
+
+ </body>
 
 </html>
