修改圖片路徑至public

--- a/pages/explore.html
+++ b/pages/explore.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title></title>
-  <link rel="preload" href="/assets/fonts/ChenYuluoyan-2.0-Thin.woff2" as="font" type="font/woff2"
+  <link rel="preload" href="/fonts/ChenYuluoyan-2.0-Thin.woff2" as="font" type="font/woff2"
     crossorigin="anonymous" fetchpriority="high" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.13.1/font/bootstrap-icons.min.css"
     rel="stylesheet">
@@ -54,7 +54,7 @@
           <div class="row">
             <div class="col-12 col-md-4">
               <div class="choosecard rounded" data-go="c1">
-                <img class="rounded p-8 p-md-12" src="/assets/images/explore/explore-threeroad1.png"
+                <img class="rounded p-8 p-md-12" src="/images/explore/explore-threeroad1.png"
                   alt="帶有酸甜花果香味的道路" />
                 <p class=" p-8 p-md-12">帶有酸甜花果香味的道路</p>
               </div>
@@ -62,7 +62,7 @@
 
             <div class="col-12 col-md-4">
               <div class="choosecard rounded" data-go="c2">
-                <img class="rounded p-8 p-md-12" src="/assets/images/explore/explore-threeroad2.png"
+                <img class="rounded p-8 p-md-12" src="/images/explore/explore-threeroad2.png"
                   alt="溫和堅果巧克力味的道路" />
                 <p class="p-8 p-md-12">溫和堅果巧克力味的道路</p>
               </div>
@@ -70,7 +70,7 @@
 
             <div class="col-12 col-md-4">
               <div class="choosecard rounded" data-go="c3">
-                <img class="rounded p-8 p-md-12" src="/assets/images/explore/explore-threeroad3.png"
+                <img class="rounded p-8 p-md-12" src="/images/explore/explore-threeroad3.png"
                   alt="濃郁草本優雅香氣的道路" />
                 <p class="p-8 p-md-12">濃郁草本優雅香氣的道路</p>
               </div>
@@ -96,21 +96,21 @@
           <div class="row">
             <div class="col-12 col-md-4">
               <div class="choosecard rounded" data-go="c4">
-                <img class="rounded p-8 p-md-12" src="/assets/images/explore/explore-cake1-1.png" alt="柑橘磅蛋糕" />
+                <img class="rounded p-8 p-md-12" src="/images/explore/explore-cake1-1.png" alt="柑橘磅蛋糕" />
                 <p class="p-8 p-md-12">柑橘磅蛋糕</p>
               </div>
             </div>
 
             <div class="col-12 col-md-4">
               <div class="choosecard rounded" data-go="d3">
-                <img class="rounded p-8 p-md-12" src="/assets/images/explore/explore-cake1-2.png" alt="法式芒果軟糖" />
+                <img class="rounded p-8 p-md-12" src="/images/explore/explore-cake1-2.png" alt="法式芒果軟糖" />
                 <p class="p-8 p-md-12">法式芒果軟糖</p>
               </div>
             </div>
 
             <div class="col-12 col-md-4">
               <div class="choosecard rounded" data-go="d4">
-                <img class="rounded p-8 p-md-12" src="/assets/images/explore/explore-cake1-3.png" alt="黑醋栗奶油蛋糕" />
+                <img class="rounded p-8 p-md-12" src="/images/explore/explore-cake1-3.png" alt="黑醋栗奶油蛋糕" />
                 <p class="p-8 p-md-12">黑醋栗奶油蛋糕</p>
               </div>
             </div>
@@ -133,13 +133,13 @@
           <div class="row">
             <div class="col-12 col-md-6">
               <div class="choosecard rounded" data-go="d1">
-                <img class="rounded p-8 p-md-12" src="/assets/images/explore/explore-cake4-1.png" alt="白桃果凍" />
+                <img class="rounded p-8 p-md-12" src="/images/explore/explore-cake4-1.png" alt="白桃果凍" />
                 <p class="p-8 p-md-12">白桃果凍</p>
               </div>
             </div>
             <div class="col-12 col-md-6">
               <div class="choosecard rounded" data-go="d2">
-                <img class="rounded p-8 p-md-12" src="/assets/images/explore/explore-cake4-2.png" alt="蜂蜜杯子蛋糕" />
+                <img class="rounded p-8 p-md-12" src="/images/explore/explore-cake4-2.png" alt="蜂蜜杯子蛋糕" />
                 <p class="p-8 p-md-12">蜂蜜杯子蛋糕</p>
               </div>
             </div>
@@ -163,28 +163,28 @@
           <div class="row">
             <div class="col-12 col-md-3">
               <div class="choosecard rounded" data-go="d5">
-                <img class="rounded p-8 p-md-12" src="/assets/images/explore/explore-cake2-1.png" alt="李子核桃塔" />
+                <img class="rounded p-8 p-md-12" src="/images/explore/explore-cake2-1.png" alt="李子核桃塔" />
                 <p class="p-8 p-md-12">李子核桃塔</p>
               </div>
             </div>
 
             <div class="col-12 col-md-3">
               <div class="choosecard rounded" data-go="d6">
-                <img class="rounded p-8 p-md-12" src="/assets/images/explore/explore-cake2-2.png" alt="萊姆夾心餅乾" />
+                <img class="rounded p-8 p-md-12" src="/images/explore/explore-cake2-2.png" alt="萊姆夾心餅乾" />
                 <p class="p-8 p-md-12">萊姆夾心餅乾</p>
               </div>
             </div>
 
             <div class="col-12 col-md-3">
               <div class="choosecard rounded" data-go="d6">
-                <img class="rounded p-8 p-md-12" src="/assets/images/explore/explore-cake2-3.png" alt="櫻桃核果磅蛋糕" />
+                <img class="rounded p-8 p-md-12" src="/images/explore/explore-cake2-3.png" alt="櫻桃核果磅蛋糕" />
                 <p class="p-8 p-md-12">櫻桃核果磅蛋糕</p>
               </div>
             </div>
 
             <div class="col-12 col-md-3">
               <div class="choosecard rounded" data-go="d8">
-                <img class="rounded p-8 p-md-12" src="/assets/images/explore/explore-cake1-1.png" alt="柑橘磅蛋糕" />
+                <img class="rounded p-8 p-md-12" src="/images/explore/explore-cake1-1.png" alt="柑橘磅蛋糕" />
                 <p class="p-8 p-md-12">柑橘磅蛋糕</p>
               </div>
             </div>
@@ -207,14 +207,14 @@
           <div class="row">
             <div class="col-12 col-md-6">
               <div class="choosecard rounded" data-go="d9">
-                <img class="rounded p-8 p-md-12" src="/assets/images/explore/explore-cake3-1.png" alt="黑糖榛果塔" />
+                <img class="rounded p-8 p-md-12" src="/images/explore/explore-cake3-1.png" alt="黑糖榛果塔" />
                 <p class="p-8 p-md-12">黑糖榛果塔</p>
               </div>
             </div>
 
             <div class="col-12 col-md-6">
               <div class="choosecard rounded" data-go="d10">
-                <img class="rounded p-8 p-md-12" src="/assets/images/explore/explore-cake3-2.png" alt="蜂蜜紅茶餅乾" />
+                <img class="rounded p-8 p-md-12" src="/images/explore/explore-cake3-2.png" alt="蜂蜜紅茶餅乾" />
                 <p class="p-8 p-md-12">蜂蜜紅茶餅乾</p>
               </div>
             </div>
@@ -231,7 +231,7 @@
 
       <!-- 茶會到了尾聲 -->
       <section id="d" class="d-none">
-        <div class="content bg5">    
+        <div class="content bg5">
           <div class="row align-items-center">
             <!-- 左邊 -->
             <div class="col-12 col-md-7">
@@ -247,17 +247,19 @@
             </div>
             <!-- 右邊 -->
             <div class="col-12 col-md-5 x2">
-              <div class="rounded bg-white pb-20 position-relative">
-                <div class="hearticon">
-                  <i class="bi bi-heart cicon"></i>
-                  <i class="bi bi-heart-fill cicon d-none"></i>
+              <a href="productdetail.html">
+                <div class="rounded pb-20 position-relative productcard">
+                  <div class="hearticon">
+                    <i class="bi bi-heart cicon"></i>
+                    <i class="bi bi-heart-fill cicon d-none"></i>
+                  </div>
+                  <img class="coffee-img rounded" src="/images/explore/explore-coffee-1.png"
+                    alt="祕魯 薇拉瑞卡 安迪亞斯莊園" />
+                  <div class="coffee-type mb-8">經典咖啡豆 | 中度烘焙</div>
+                  <div class="coffee-name mb-8">祕魯 薇拉瑞卡 安迪亞斯莊園</div>
+                  <div class="coffee-price">$280~$600</div>
                 </div>
-                <img class="coffee-img rounded" src="/assets/images/explore/explore-coffee-1.png"
-                  alt="祕魯 薇拉瑞卡 安迪亞斯莊園" />
-                <div class="coffee-type mb-8">經典咖啡豆 | 中度烘焙</div>
-                <div class="coffee-name mb-8">祕魯 薇拉瑞卡 安迪亞斯莊園</div>
-                <div class="coffee-price">$280~$600</div>
-              </div>
+              </a>
             </div>
           </div>
         </div>
@@ -269,19 +271,19 @@
 
       <%- include('./layout/js'); -%>
 
-       <%- include('./layout/jquery'); -%>
+        <%- include('./layout/jquery'); -%>
 </body>
 
 </html>
 
 
-   <!-- 手機顯示 -->
-          <!-- <div class="d-block d-md-none">
+<!-- 手機顯示 -->
+<!-- <div class="d-block d-md-none">
             <p class="mb-4">茶會到了尾聲，感謝您今日蒞臨羊蹄茶會</p>
             <p class="mb-16">最後為您獻上最適合的咖啡風味</p>
             <h2 class="coffee-name-br h1 mb-16">祕魯 薇拉瑞卡<br>安迪亞斯莊園</h2>
             <div class="rounded bg-white py-20 mb-16">
-              <img class="coffee-img rounded" src="/assets/images/explore/explore-coffee-1.png" alt="祕魯 薇拉瑞卡 安迪亞斯莊園" />
+              <img class="coffee-img rounded" src="/images/explore/explore-coffee-1.png" alt="祕魯 薇拉瑞卡 安迪亞斯莊園" />
               <div class="coffee-type mb-8">經典咖啡豆 | 中度烘焙</div>
               <div class="coffee-name mb-8">祕魯 薇拉瑞卡 安迪亞斯莊園</div>
               <div class="coffee-price">$280~$600</div>
